<resources>
    <string name="app_name">Chain Car</string>

    <string name="available">Verfügbar</string>
    <string name="vehicle_image_description">Vehicle Image</string>
    <string name="vehicle_min_max_rent_duration">{1} - {2} Stunden</string>
    <string name="vehicle_rent_duration">{1} Stunden</string>
    <string name="vehicle_distance">Entfernung: {1} km</string>
    <string name="wallet_not_connected">Wallet nicht verbunden.</string>
    <string name="wallet_connected">Wallet verbunden.</string>
    <string name="connect_wallet">Wallet verbinden</string>
    <string name="disconnect_wallet">Wallet trennen</string>
    <string name="details">Fahrzeugdetails</string>
    <string name="model">Modell: {1}</string>
    <string name="type">Typ: {1}</string>
    <string name="manufacturer">Hersteller: {1}</string>
    <string name="ps">Leistung (PS): {1}</string>
    <string name="color">Farbe: {1}</string>
    <string name="numberplate">Nummernschild: {1}</string>
    <string name="home">Heimatadresse</string>
    <string name="street_and_number">{1} {2}</string>
    <string name="postcode_and_city">{1} {2}</string>
    <string name="country">{1}</string>
    <string name="rent">Mieten</string>
    <string name="rent_price">Preis: {1}</string>
    <string name="time">{1}:{2} h</string>
    <string name="close">Schließen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button_description">Button Back</string>
</resources>
