<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VehicleInfoActivity"
    android:background="@color/colorPrimaryDark"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp">

            <ImageView
                android:id="@+id/galery"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/vehicle_image_description"
                android:background="#A0A0A0"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vehicleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@id/galery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Vehicle Name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/titleVehicleDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/vehicleName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/details"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/titleVehicleDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/model"
                android:textSize="18sp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/model"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/type"
                android:textSize="18sp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/manufacturer"
                android:textSize="18sp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/ps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/manufacturer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/ps"
                android:textSize="18sp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/ps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/color"
                android:textSize="18sp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/numberplate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/numberplate"
                android:textSize="18sp"
                android:textColor="#ffffff"/>


            <TextView
                android:id="@+id/titleHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/numberplate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/home"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/streetAndNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/titleHome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/street_and_number"
                android:textSize="18sp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/postCodeAndCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/streetAndNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/postcode_and_city"
                android:textSize="18sp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/postCodeAndCity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/country"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/rentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/rent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/vehiclePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/rentTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/rent_price"
                android:textSize="18sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/rentDurationText"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/vehiclePrice"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="#ffffff"
                android:text="@string/time"
                android:gravity="center_vertical"
                />

            <SeekBar
                android:id="@+id/rentDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="10dp"
                android:progressBackgroundTint="#000000"
                android:progressTint="#ffffff"
                android:thumbTint="#ffffff"
                app:layout_constraintEnd_toStartOf="@id/rentDurationText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vehiclePrice" />

            <Button
                android:id="@+id/buttonRent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/rent"
                android:backgroundTint="#ffffff"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/rentDuration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back_button_description"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleY=".75"
        android:scaleX=".75"/>

</androidx.constraintlayout.widget.ConstraintLayout>