<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp"
    android:background="@drawable/rounded_corner_bg"
    >

    <ImageView
        android:id="@+id/vehicleImage"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:contentDescription="@string/vehicle_image_description"
        app:srcCompat="@color/colorPrimaryDark"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/vehicleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vehicle Name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/minMaxRentDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_min_max_rent_duration"
            app:layout_constraintBottom_toTopOf="@+id/vehicleDistance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleName" />

        <TextView
            android:id="@+id/vehicleDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_distance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/vehiclePrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:text="999,00 €"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="20sp"/>

</LinearLayout>